# mcp-servers

./: .gitignore  README.md  pyproject.toml
great_learning/: README.md  check_ollama.py  create_data.py  great_learning_mcp.py  mcp_config.json  run.py
