[tool.poetry]
name = "mcp-servers"
version = "0.1.0"
description = ""
authors = ["Prakash Chaudhary <connectwithprakash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.12"
langchain-anthropic = "^0.3.10"
scikit-learn = "^1.6.1"
bs4 = "^0.0.2"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
matplotlib = "^3.10.1"
lxml = "^5.3.2"
langgraph = "^0.3.25"
mcp = { extras = ["cli"], version = "^1.6.0" }
tiktoken = ">=0.7,<1"
aiohttp = "^3.9.3"
requests = "^2.31.0"
tqdm = "^4.66.4"
tenacity = "^8.2.3"
urllib3 = "^2.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
